--- a/style.css
+++ b/style.css
@@ -14,3 +14,11 @@ body {
   font-weight: 400;
   color: #555;
 }
+
+.hero {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.hero-img {
+}
