--- a/style.css
+++ b/style.css
@@ -16,9 +16,12 @@ body {
 }
 
 .hero {
+  margin: 0 auto;
+  max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
 }
 
 .hero-img {
+  width: 100%;
 }
