--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+/* 
+--- 01 TEXT
+-Line heights
+Default: 1
+
+
+---02 COLORS
+- Primary: #e67e22
+- Tints:
+- Shades: 
+- Accents: 
+- Greys: 
+#555
+#333
+*/
+
 * {
   margin: 0;
   padding: 0;
@@ -20,8 +36,24 @@ body {
   max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  align-items: center;
 }
 
 .hero-img {
   width: 100%;
+}
+
+.heading-primary {
+  font-size: 5.2rem;
+  font-weight: 700;
+  line-height: 1.05;
+  color: #333;
+  letter-spacing: -0.5px;
+  margin-bottom: 3.2rem;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin-bottom: 4.8rem;
 }
