--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Default: 1
 
 ---02 COLORS
 - Primary: #e67e22
-- Tints:
+- Tints: #fdf2e9
 - Shades: 
 - Accents: 
 - Greys: 
@@ -30,12 +30,17 @@ body {
   font-weight: 400;
   color: #555;
 }
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 9.6rem 0;
+}
 
 .hero {
   margin: 0 auto;
   max-width: 130rem;
   display: grid;
   grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
   align-items: center;
 }
 
@@ -56,4 +61,42 @@ body {
   font-size: 2rem;
   line-height: 1.5;
   margin-bottom: 4.8rem;
+}
+
+.btn:link,
+.btn:visited {
+  display: inline-block;
+
+  font-size: 2rem;
+  color: #fff;
+  padding: 1.6rem 3.2rem;
+  border-radius: 1.5rem;
+  text-decoration: none;
+  transition: background-color 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+  background-color: #e67e22;
+}
+.btn--full:hover,
+.btn--full:active {
+  background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+  background-color: #fff;
+  color: #555;
+}
+.btn--outline:hover,
+.btn--outline:active {
+  background-color: #fdf2e9;
+  /* color: #555; */
+  /* Trick to add border inside */
+  box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+  margin-right: 1.6rem !important;
 }
