--- a/style.css
+++ b/style.css
@@ -103,3 +103,17 @@ body {
 .delivered-meals {
   display: flex;
 }
+.delivered-imgs {
+  display: flex;
+}
+
+.delivered-imgs img {
+  height: 6.4rem;
+  width: 6.4rem;
+  border-radius: 50%;
+}
+
+.delivered-text {
+  font-size: 1.8rem;
+  font-weight: 600;
+}
