--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Default: 1
 ---02 COLORS
 - Primary: #e67e22
 - Tints: #fdf2e9
-- Shades: 
+- Shades: #cf711f
 - Accents: 
 - Greys: 
 #555
@@ -102,18 +102,31 @@ body {
 }
 .delivered-meals {
   display: flex;
+  align-items: center;
+  gap: 1.6rem;
+  margin-top: 8rem;
 }
 .delivered-imgs {
   display: flex;
 }
 
 .delivered-imgs img {
-  height: 6.4rem;
-  width: 6.4rem;
+  height: 4.8rem;
+  width: 4.8rem;
   border-radius: 50%;
+  margin-right: -1.6rem;
+  border: 3px solid #fdf2e9;
 }
 
+.delivered-imgs img:last-child {
+  margin: 0;
+}
 .delivered-text {
   font-size: 1.8rem;
   font-weight: 600;
+}
+
+.delivered-text span {
+  color: #cf711f;
+  font-weight: 700;
 }
