--- a/style.css
+++ b/style.css
@@ -30,24 +30,9 @@ body {
   font-weight: 400;
   color: #555;
 }
-.section-hero {
-  background-color: #fdf2e9;
-  padding: 9.6rem 0;
-}
-
-.hero {
-  margin: 0 auto;
-  max-width: 130rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 9.6rem;
-  align-items: center;
-}
-
-.hero-img {
-  width: 100%;
-}
-
+/* ***************************************************************** */
+/* GENERAL REUSABLE COMPONENTS */
+/* ****************************************************************** */
 .heading-primary {
   font-size: 5.2rem;
   font-weight: 700;
@@ -56,13 +41,6 @@ body {
   letter-spacing: -0.5px;
   margin-bottom: 3.2rem;
 }
-
-.hero-description {
-  font-size: 2rem;
-  line-height: 1.5;
-  margin-bottom: 4.8rem;
-}
-
 .btn:link,
 .btn:visited {
   display: inline-block;
@@ -96,10 +74,54 @@ body {
   /* Trick to add border inside */
   box-shadow: inset 0 0 0 3px #fff;
 }
-
 .margin-right-sm {
   margin-right: 1.6rem !important;
 }
+
+/* ***************************************************************** */
+/* HEADER */
+/* ****************************************************************** */
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #fdf2e9;
+  height: 9.6rem;
+  padding: 0 4.8rem;
+}
+.logo {
+  height: 2.2rem;
+}
+
+/* ***************************************************************** */
+/* HERO SECTION */
+/* ****************************************************************** */
+
+.section-hero {
+  background-color: #fdf2e9;
+  padding: 4.8rem 0 9.6rem 0;
+}
+
+.hero {
+  margin: 0 auto;
+  padding: 0 3.2rem;
+  max-width: 130rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 9.6rem;
+  align-items: center;
+}
+
+.hero-img {
+  width: 100%;
+}
+
+.hero-description {
+  font-size: 2rem;
+  line-height: 1.5;
+  margin-bottom: 4.8rem;
+}
+
 .delivered-meals {
   display: flex;
   align-items: center;
